Ensure that zoomed images are always visible

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -137,6 +137,11 @@ div.notices p {
   color: #666;
 }
 
+.featherlight-image {
+  min-width: 50vw;
+  padding: 10px;
+}
+
 img {
   background-color: black;
   color-adjust: exact;
